project17/backend.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: backend-deploy
# spec:
#   replicas: 2
#   selector:
#     matchLabels:
#       app: backend
#   template:
#     metadata:
#       labels:
#         app: backend
#   spec:
#       containers:
#       - name: backend
#         image: backend-app:1.0
#         ports:
#         - containerPort: 5000
#         env:
#         - name: DB_USER
#           valueFrom:
#             configMapKeyRef:
#               name: app-config
#               key: DB_USER
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: backend-app:1.0
          ports:
            - containerPort: 5000
